mini-kube-demo/Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
    - host: learn-k8s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: create-react-app
                port:
                  number: 3000
